@@ -56,6 +56,13 @@ public class Lox {
     //
     // Stop if there was a syntax error.                   
     if (hadError) return;
+    Resolver resolver = new Resolver(interpreter);
+    resolver.resolve(statements);
+    
+    // Stop if there was a resolution error.
+    if (hadError) return;
+
+
     interpreter.interpret(statements);
     // System.out.println(new AstPrinter().print(expression));
 
