@@ -1,4 +1,8 @@
 Last update: dimanche, 24/03/19
+# Date: dimanche, 24/03/19
+Adding: resolver class for semantic analyer
+
+#--------------------------------------------------------------------------------
 
 # Date: samedi, 23/03/19
 Adding: closure function.
